Refactor rule and rule set management UI
- Replace `ViewRegistry` with streamlined logic for fetching and rendering meta properties.
- Use `Collections.emptyList()` for initializing empty property and operation fields.
- Update message bundle keys for consistent internationalization support.
- Enhance `RuleDetailFragment` with support for action selection and editable action code via a code editor.
- Add new `preview` and `processData` tabs in `RuleSetDetailView` for source code and execution data visualization.
- Improve general UI and component initialization logic in `RuleSetDetailView` and `RuleDetailFragment`.